<resources>
    <string name="app_name">123</string>
    <string name="text">Name</string>
    <string name="signup">Sign Up</string>
    <string name="fill_name">Name</string>
    <string name="email">E-mail</string>
    <string name="fill_email">E-mail</string>
    <string name="txt1">Password</string>
    <string name="txt2">Password</string>
    <string name="txt3">Contact NO</string>
    <string name="txt4">Contact Number</string>
    <string name="txt5">Address</string>
    <string name="txt6">Address</string>
    <string name="txt7">Gender</string>
    <string name="txt8">Male</string>
    <string name="txt9">Female</string>
    <string name="txt10">Sign UP</string>
    <string name="txt11">Cancel</string>
    <string name="txt12">Already have an account?</string>
    <string name="app_name1">Profile</string>
    <string name="txt13">Deshan Perera</string>
    <string name="txt14">Name:</string>
    <string name="txt15">Deshan Perera</string>
    <string name="txt16">E-mail:</string>
    <string name="txt17">deshan@gmail.com</string>
    <string name="txt18">Password:</string>
    <string name="txt19">**********</string>
    <string name="txt20">Contact NO:</string>
    <string name="txt21">0757557557</string>
    <string name="txt22">Address:</string>
    <string name="txt23">NO 7, Temple Road, Galle</string>
    <string name="txt24">Gender:</string>
    <string name="txt25">Male</string>
    <string name="txt26">Edit Profile</string>
    <string name="txt27">Delete My Account</string>
    <string name="txt28">Log Out</string>
    <string name="app_name2">Edit Profile</string>
    <string name="txt29">Deshan Perera</string>
    <string name="txt30">Update Profile Picture</string>
    <string name="txt31">Change Name</string>
    <string name="txt32">Deshan Perera   ></string>
    <string name="txt33">Change E-mail</string>
    <string name="txt34">deshan@gmail.com   ></string>
    <string name="txt35">Change Password</string>
    <string name="txt36">**********  ></string>
    <string name="txt37">Change Contact NO</string>
    <string name="txt38">0757557557  ></string>
    <string name="txt39">Change Address</string>
    <string name="txt40">NO 7, Temple Road, Galle  ></string>
    <string name="txt41">Change Gender</string>
    <string name="txt42">Male</string>
    <string name="txt43">Female</string>
    <string name="txt44">Save</string>
    <string name="txt45">Cancel</string>
    <string name="app_name3">Account</string>
    <string name="txt46">Deshan Perera</string>
    <string name="txt47">My Profile</string>
    <string name="txt48">My Orders</string>
    <string name="txt49">My Cart</string>
    <string name="txt50">Contact Us</string>
    <string name="txt51">Sell an item</string>
    <string name="txt52">Log Out</string>
</resources>